# trading-system

./: .gitignore  README.md  pyproject.toml
configs/: ETH-USD.yaml
src/tsroot/: cli.py
